# multiros

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
src/multiros/: __init__.py  core.py
src/multiros/envs/: GazeboBaseEnv.py  GazeboGoalEnv.py
src/multiros/envs/real_envs/: RealBaseEnv.py  RealGoalEnv.py  __init__.py
src/multiros/templates/: __init__.py
src/multiros/templates/gazebo_envs/robot_envs/: MyRobotEnv.py  MyRobotGoalEnv.py
src/multiros/templates/gazebo_envs/task_envs/: MyTaskEnv.py  MyTaskGoalEnv.py
src/multiros/templates/real_envs/robot_envs/: MyRealRobotEnv.py  MyRealRobotGoalEnv.py
src/multiros/templates/real_envs/task_envs/: MyRealTaskEnv.py  MyRealTaskGoalEnv.py
src/multiros/templates/robot_envs/: MyRobotEnv.py  MyRobotGoalEnv.py  __init__.py
src/multiros/templates/task_envs/: MyTaskEnv.py  MyTaskGoalEnv.py  __init__.py
src/multiros/utils/: __init__.py  gazebo_core.py  gazebo_models.py  gazebo_physics.py  moveit_multiros.py  ros_common.py  ros_controllers.py  ros_kinematics.py  ros_markers.py
src/multiros/wrappers/: __init__.py  normalize_action_wrapper.py  normalize_obs_wrapper.py  time_limit_wrapper.py
