<?xml version="1.0"?>
<package format="2">
  <name>multiros</name>
  <version>1.0.0</version>
  <description>MultiROS: ROS-Based Robot Simulation Environment for Concurrent Deep Reinforcement Learning</description>

  <author email="j.kapukotuwa@research.ait.ie">Jayasekara Kapukotuwa</author>
  <maintainer email="j.kapukotuwa@research.ait.ie">Jayasekara Kapukotuwa</maintainer>

  <license>MIT</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python3-catkin-pkg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>controller_manager_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
